# truce

./: .gitignore  CHANGELOG.md  COMMERCIAL_FRAMEWORK_LICENSING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  truce.toml
.github/workflows/: bake-screenshots.yml  ci-ios.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  cli-backcompat.yml  cli-install.yml  cli-scaffold.yml  docs.yml
crates/cargo-truce/: Cargo.toml  README.md
crates/truce/: Cargo.toml  README.md
crates/truce-aax/: Cargo.toml  README.md
crates/truce-aax-bridge/: README.md
crates/truce-au/: Cargo.toml  README.md  build.rs
crates/truce-au/shim/: au_shim_common.c  au_v2_shim.c  au_v2_view.m
crates/truce-au/src/: cocoa_view.rs  ffi.rs  lib.rs
crates/truce-build/: Cargo.toml  README.md
crates/truce-clap/: Cargo.toml  README.md
crates/truce-core/: Cargo.toml  README.md
crates/truce-cpu/: README.md
crates/truce-derive/: Cargo.toml  README.md
crates/truce-driver/: Cargo.toml  README.md
crates/truce-dsp/: Cargo.toml  README.md
crates/truce-egui/: Cargo.toml  README.md
crates/truce-font/: Cargo.toml  README.md
crates/truce-gpu/: Cargo.toml  README.md
crates/truce-gui/: Cargo.toml  README.md
crates/truce-gui-types/: Cargo.toml  README.md
crates/truce-iced/: Cargo.toml  README.md
crates/truce-loader/: Cargo.toml  README.md
crates/truce-loader-tests/: Cargo.toml  README.md
crates/truce-lv2/: Cargo.toml  README.md
crates/truce-params/: Cargo.toml  README.md
crates/truce-params-derive/: README.md
crates/truce-plugin/: Cargo.toml  README.md
crates/truce-shim-types/: Cargo.toml  README.md
crates/truce-simd/: Cargo.toml  README.md
crates/truce-slint/: Cargo.toml  README.md
crates/truce-slint-build/: Cargo.toml  README.md
crates/truce-standalone/: Cargo.toml  README.md
crates/truce-test/: Cargo.toml  README.md
crates/truce-test/src/: assertions.rs  lib.rs
crates/truce-utils/: Cargo.toml  README.md
crates/truce-vizia/: Cargo.toml
crates/truce-vst2/: Cargo.toml  README.md
crates/truce-vst3/: Cargo.toml  README.md
crates/truce/src/: lib.rs  plugin_macro.rs
docs/: README.md  status.md
docs/formats/: au.md  standalone.md
docs/reference/: cargo-config.md  gui.md  hot-reload.md  install.md  shipping.md
examples/: README.md
examples/truce-example-arpeggio/: Cargo.toml
examples/truce-example-block-drywet/: Cargo.toml
examples/truce-example-block-gain/: Cargo.toml
examples/truce-example-block-gate/: Cargo.toml
examples/truce-example-block-saturate/: Cargo.toml
examples/truce-example-block-surround-meter/: Cargo.toml
examples/truce-example-block-widen/: Cargo.toml
examples/truce-example-dasp-bitcrusher/: Cargo.toml
examples/truce-example-drywet/: Cargo.toml
examples/truce-example-eq/: Cargo.toml  README.md
examples/truce-example-fundsp-reverb/: Cargo.toml  README.md
examples/truce-example-fundsp-reverb-simple/: Cargo.toml  README.md
examples/truce-example-fundsp-reverb-worker/: Cargo.toml  README.md
examples/truce-example-gain/: Cargo.toml  (+1 more)
examples/truce-example-gain-egui/: Cargo.toml  README.md
examples/truce-example-gain-iced/: Cargo.toml  README.md
examples/truce-example-gain-simd/: Cargo.toml
(+296 files in other folders)
