[package]
name = "truce-au"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audio Unit v3 format wrapper for truce"

# Declaring a cdylib crate-type here (in addition to the default rlib)
# makes cargo accept this crate's `rustc-link-arg-cdylib=` directives
# without warning. The real cdylib is produced by the consumer (the
# plugin's example crate); the empty cdylib cargo builds for this
# crate is unused. Links cleanly thanks to weak C stubs for
# `truce_au_init` / `TruceAUFactory` in `shim/au_shim_common.c`, which
# the consumer's `export_au!`-generated strong definitions override.
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
# Wait-free bounded queue for the host/editor → audio state-load
# handoff so the audio thread is the only one that ever holds
# `&mut Plugin`.
crossbeam-queue = "0.3"

# ObjC runtime for runtime class registration. The cocoa view
# factory class (AUCocoaUIBase) needs a unique name per plugin to
# avoid collisions when a host loads multiple truce plugins, so we
# allocate it at register-time rather than baking the name into a C
# `#define` (which forced a per-plugin shim recompile of truce-au).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }

[build-dependencies]
cc = "1"
truce-shim-types = { workspace = true }

[lints]
workspace = true
