[package]
name = "truce-test"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Test utilities for truce plugins (render, state, params, GUI snapshots)"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-driver = { workspace = true }
truce-build = { workspace = true }
png = "0.18"
toml = "1"

[lints]
workspace = true
