[package]
name = "truce"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "Audio plugin framework - write once, build CLAP, VST3, VST2, LV2, AU v2, AU v3, AAX, and a standalone host binary"
keywords = ["audio", "plugin", "vst", "clap", "midi"]
categories = ["multimedia::audio"]

[dependencies]
truce-core = { workspace = true }
truce-gui = { workspace = true }
truce-params = { workspace = true }
truce-loader = { workspace = true }
truce-derive = { workspace = true }

[features]
default = ["clap"]
clap = ["dep:truce-clap"]
vst3 = ["dep:truce-vst3"]
vst2 = ["dep:truce-vst2"]
lv2 = ["dep:truce-lv2"]
shell = ["truce-loader/shell"]
hot-debug = ["truce-loader/hot-debug"]

[dependencies.truce-clap]
workspace = true
optional = true

[dependencies.truce-vst3]
workspace = true
optional = true

[dependencies.truce-vst2]
workspace = true
optional = true

[dependencies.truce-lv2]
workspace = true
optional = true

[lints]
workspace = true
